
  - (BACKWARD INCOMPATIBILITY) ltlsynt's CSV output has been largely
    overhauled, and the output columns have been both renamed (for
    consistency) and augmented (with new statistics).  The new CSV
    output should be more useful when the input specification is
    decomposed, in particular, there is a column giving the number of
    sub-specifications obained, and other statistics columns have
    names starting with "max_" or "sum_" indicating how said
    statistics are updated across sub-specifications.

    See https://spot.lre.epita.fr/ltlsynt.html#csv for an example.

    Additionally, --csv=FILENAME will now save the source filename for
    the processed formulas as the first column of the CSV file, and
    the "formula" column is no longer output by default to save space.
    This "formula" column can be added back with the new option
    --csv-with-formula=FILENAME if really needed.

  - ltlsynt learned a --part-file option, to specify the partition of
    input/output proposition from a *.part file, as used in several
    other tools.

  - ltlfilt learned a --relabel=io mode, that is useful to shorten
    atomic propositions in the context of LTL synthesis.  For instance

    % ltlfilt -f 'G(req->Fack)&G(go->Fgrant)' --relabel=io --ins=req,go
    G(i1 -> Fo0) & G(i0 -> Fo1)

    The resulting formulas are now usable by ltlsynt without having to
    specify which atomic propositions are input or output, as this can
    be inferred from their name.  (This suspports a --part-file option
    as well.)

  - genltl learned --lily-patterns to generate the example LTL
    synthesis specifications from Lily 1.0.2.  Those come with input
    and output atomic proposition rewriten in the form "iNN" or "oNN",
    so they can be fed to ltlsynt directly, as in

       % genltl --lily-patterns | ltlsynt -q

  - autfilt learned --restrict-dead-end-edges, to restricts labels of
    edges leading to dead-ends.  See the description of